@@ -1,3 +1,15 @@
+2012-11-08  Corinna Vinschen  <corinna@vinschen.de>
+
+	* sigproc.cc (proc_subproc): Delete unused variable child.
+
+2012-11-08  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* fhandler_termios.cc (fhandler_termios::line_edit): Don't do special
+	character handling when stopped by CTRL-S.
+	* fhandler_tty.cc (bytes_available): Add arguments to debug_only_printf
+	call.
+	* sigproc.cc (proc_subproc): Simplify some if logic.
+
 2012-11-04  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* include/sys/termios.h (CBRK): Define as alias of CEOL.
